# rust-golf-btc

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/: 20220827192100_create_user_table.up.sql
src/: main.rs
src/auth/: api.rs  security.rs
src/errors/: api.rs
src/users/: api.rs  models.rs  types.rs
